--- a/Exercicios/ex022/fundos001.html
+++ b/Exercicios/ex022/fundos001.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fundos de tela</title>
     <style>
+        body{
+            background-image: url(imagens/wallpaper002.jpg);
+        }
         div.quadrado{
             border: 2px solid black;
             height: 300px;
