--- a/Exercicios/ex025/form002.html
+++ b/Exercicios/ex025/form002.html
@@ -22,7 +22,7 @@
         </p>
         <p>
             <input type="submit" value="Enviar">
-            <input type="button" value="Limpar">
+            <input type="reset" value="Limpar">
         </p>
     </form>
 </body>
