--- a/Exercicios/ex026/mq002/index.html
+++ b/Exercicios/ex026/mq002/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portait landscape</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="stylesheet" href="estilo/portrait.css" media="screen" (orientation='portrait')>
+    <link rel="stylesheet" href="estilo/landscape.css" media="screen" (orientation='landscape')>
 </head>
 <body>
-    
+    <h1> vire o celular</h1>
+
 </body>
 </html>
