--- a/Exercicios/ex026/mq002/index.html
+++ b/Exercicios/ex026/mq002/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portait landscape</title>
+    <title>Portrait and Landscape</title>
+    <link rel="stylesheet" href="estilo/retrato.css" media="screen and (orientation:portrait)">
+    <link rel="stylesheet" href="estilo/paisagem.css" media="screen and (orientation:landscape)">
     <link rel="stylesheet" href="estilo/style.css" media="all">
-    <link rel="stylesheet" href="estilo/portrait.css" media="screen" (orientation='portrait')>
-    <link rel="stylesheet" href="estilo/landscape.css" media="screen" (orientation='landscape')>
 </head>
 <body>
-    <h1> vire o celular</h1>
-
+    <h1>Orietações da tela</h1>
 </body>
 </html>
